fixing tos overlap (#134)

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -70,7 +70,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 80;
+  z-index: 10000;
 }
 
 .legal-modal-overlay[hidden] {
